@@ -6,9 +6,8 @@
 \title{Convert between NetCDF and GDS format}
 
 \description{
-  \code{convertNcdfGds} converts a genotype NetCDF file to the GDS
-  format used by the R packages \pkg{\link[gdsfmt]{gdsfmt}} and
-  \pkg{\link[SNPRelate]{SNPRelate}}.
+  \code{convertNcdfGds} converts a NetCDF file to GDS
+  format.
 
   \code{convertGdsNcdf} converts a GDS file to NetCDF format.
 
@@ -17,31 +16,33 @@
 }
 
 \usage{
-convertNcdfGds(ncdf.filename, gds.filename,
-  sample.annot = NULL, snp.annot = NULL,
-  zipflag = "ZIP.max", verbose = TRUE)
+convertNcdfGds(ncdf.filename, gds.filename, snp.annot = NULL,
+  precision = "single", zipflag = "ZIP.max", verbose = TRUE)
 
-convertGdsNcdf(gds.filename, ncdf.filename, verbose = TRUE)
+convertGdsNcdf(gds.filename, ncdf.filename,
+  precision = "single", verbose = TRUE)
 
 checkNcdfGds(ncdf.filename, gds.filename, verbose = TRUE)
 }
 
 \arguments{
-  \item{ncdf.filename}{name of the NetCDF genotype file}
+  \item{ncdf.filename}{name of the NetCDF file}
   \item{gds.filename}{name of the GDS file}
-  \item{sample.annot}{a \code{\link{ScanAnnotationDataFrame}} with sample annotation}
-  \item{snp.annot}{a \code{\link{SnpAnnotationDataFrame}} with SNP annotation}
+  \item{snp.annot}{a \code{\link{SnpAnnotationDataFrame}} with SNP
+    annotation.  The column named "snpName" will be written to
+  "snp.rs.id" in the GDS file.}
+
+\item{precision}{A character value indicating whether floating point
+  numbers should be stored as "double" or "single" precision.}
+
   \item{zipflag}{the compression format for the GDS file, one of "",
     "ZIP", "ZIP.fast", "ZIP.default", or "ZIP.max"}
   \item{verbose}{whether to show progress information}
 }
 
 \details{
-  These functions require that the package \pkg{\link[gdsfmt]{gdsfmt}} be
-  installed.  \code{convertNcdfGds} is needed to convert the NetCDF
-  genotype files used in this package to the format required by
-  \pkg{\link[SNPRelate]{SNPRelate}} for Principal Component Analysis,
-  Identity-by-Descent, and Linkage Disequlibrium calculations.
+  \code{convertNcdfGds} assumes any variables other than "sampleID",
+  "chromosome", and "position" have dimensions SNP x sample.
 
   If \code{snp.annot} has columns "rsID", "alleleA", "alleleB", these
   will be stored in the GDS file as "snp.rs.id" and "snp.allele" (the
@@ -49,6 +50,9 @@ checkNcdfGds(ncdf.filename, gds.filename, verbose = TRUE)
 
   Chromosome codes from \code{snp.annot} (for autosomes, X, Y, etc.)
   will be stored in the GDS file.
+
+  \code{convertGdsNcdf} assumes any variables not starting with "snp" or
+  "sample" have dimensions SNP x sample.
 }
 
 \value{
@@ -57,30 +61,25 @@ checkNcdfGds(ncdf.filename, gds.filename, verbose = TRUE)
   diagnostic message and return \code{FALSE}.
 }
 
-\author{Xiuwen Zheng}
+\author{Xiuwen Zheng, Stephanie Gogarten}
 
-\seealso{\pkg{\link[gdsfmt]{gdsfmt}}, \pkg{\link[SNPRelate]{SNPRelate}}, \pkg{\link{ncdf}},
-  \code{\link{NcdfGenotypeReader}},
+\seealso{\pkg{\link[gdsfmt]{gdsfmt}},  \pkg{\link{ncdf}}
 }
 
 \examples{
 library(GWASdata)
 ncfile <- system.file("extdata", "illumina_geno.nc", package="GWASdata")
 
-data(illuminaScanADF, illuminaSnpADF)
+data(illuminaSnpADF)
 
 gdsfile <- tempfile()
-convertNcdfGds(ncfile, gdsfile, sample.annot=illuminaScanADF,
-               snp.annot=illuminaSnpADF)
+convertNcdfGds(ncfile, gdsfile, snp.annot=illuminaSnpADF)
 
 checkNcdfGds(ncfile, gdsfile)
 
-\dontrun{
 ncfile2 <- tempfile()
 convertGdsNcdf(gdsfile, ncfile2)
-file.remove(ncfile2)
-}
 
-file.remove(gdsfile)
+file.remove(gdsfile, ncfile2)
 }
 \keyword{manip}
